--- a/index.html
+++ b/index.html
@@ -10,17 +10,30 @@
 </head>
 <body>
     
-<header>
-    <nav>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+<header class="container">
+    <nav class="navbar">
+        <ul class="nav-menu w-100 ">
+            <li class="nav-etem"><a href="" class="nav-link">César</a></li>
+            <li class="nav-etem"><a href="" class="nav-link">Végenere</a></li>
+            <li class="nav-etem"><a href="" class="nav-link">Transposition</a></li>
         </ul>
     </nav>
 </header>
+<section class="container">
+    <div class="textarea">
+        <textarea name="" id="textareainput" cols="100" rows="8" class="form-control"></textarea>
+        <input type="number" name="" id="clecesar" class="form-control w-25" placeholder="saisir le clé">
+    </div>
+    <div class="div-btn">
+        <button class="btn btn-y" onclick="césar_chiffrement()">Chiffrement</button>
+        <button class="btn btn-y">DeChiffrement</button>
+    </div>
+    <div class=" textarea">
+        <textarea name="" id="textareaoutput" cols="100" rows="8" class="form-control" disabled>
 
+        </textarea>
+    </div>
+</section>
 
 
 <script src="main.js"></script>
