--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 <section class="container">
     <div class="textarea">
         <textarea name="" id="textareainput" cols="100" rows="8" class="form-control"></textarea>
-        <input type="number" name="" id="clecesar" class="form-control w-25" placeholder="saisir le clé">
+        <input type="number" value="3" name="" id="clecesar" class="form-control w-25" placeholder="saisir le clé">
     </div>
     <div class="div-btn">
         <button class="btn btn-y" onclick="césar_chiffrement()">Chiffrement</button>
-        <button class="btn btn-y">DeChiffrement</button>
+        <button class="btn btn-y" onclick="césar_dechiffrement()">DeChiffrement</button>
     </div>
     <div class=" textarea">
         <textarea name="" id="textareaoutput" cols="100" rows="8" class="form-control" disabled>
