--- a/vegener.html
+++ b/vegener.html
@@ -13,23 +13,23 @@
 <header class="container">
     <nav class="navbar">
         <ul class="nav-menu w-100 ">
-            <li class="nav-etem" id="th"><a href="" class="nav-link">César</a></li>
-            <li class="nav-etem"><a href="vegener.html" class="nav-link">Végenere</a></li>
+            <li class="nav-etem"><a href="index.html" class="nav-link">César</a></li>
+            <li class="nav-etem " id="th"><a href="" class="nav-link">Végenere</a></li>
             <li class="nav-etem"><a href="" class="nav-link">Transposition</a></li>
         </ul>
     </nav>
 </header>
 <section class="container">
     <div class="textarea">
-        <textarea name="" id="textareainput" cols="100" rows="8" class="form-control"></textarea>
-        <input type="number" value="" name="" id="clecesar" class="form-control w-25" placeholder="saisir le clé">
+        <textarea name="" id="vegenerinput" cols="100" rows="8" class="form-control"></textarea>
+        <input type="text"  name="" id="clecesar" class="form-control w-25" placeholder="saisir le clé">
     </div>
     <div class="div-btn">
-        <button class="btn btn-y" onclick="césar_chiffrement()">Chiffrement</button>
-        <button class="btn btn-y" onclick="césar_dechiffrement()">DeChiffrement</button>
+        <button class="btn btn-y" onclick="">Chiffrement</button>
+        <button class="btn btn-y" onclick="">DeChiffrement</button>
     </div>
     <div class=" textarea">
-        <textarea name="" id="textareaoutput" cols="100" rows="8" class="form-control" disabled>
+        <textarea name="" id="vegeneroutput" cols="100" rows="8" class="form-control" disabled>
 
         </textarea>
     </div>
