--- a/vegener.html
+++ b/vegener.html
@@ -22,11 +22,11 @@
 <section class="container">
     <div class="textarea">
         <textarea name="" id="vegenerinput" cols="100" rows="8" class="form-control"></textarea>
-        <input type="text"  name="" id="clecesar" class="form-control w-25" placeholder="saisir le clé">
+        <input type="text" value="" name="" id="clevegener" class="form-control w-25" placeholder="saisir le clé">
     </div>
     <div class="div-btn">
-        <button class="btn btn-y" onclick="">Chiffrement</button>
-        <button class="btn btn-y" onclick="">DeChiffrement</button>
+        <button class="btn btn-y" onclick="vegener_chiffrement()">Chiffrement</button>
+        <button class="btn btn-y" onclick="vegener_dechiffrement()">DeChiffrement</button>
     </div>
     <div class=" textarea">
         <textarea name="" id="vegeneroutput" cols="100" rows="8" class="form-control" disabled>
