--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul class="nav-menu w-100 ">
             <li class="nav-etem" id="th"><a href="" class="nav-link">César</a></li>
             <li class="nav-etem"><a href="vegener.html" class="nav-link">Végenere</a></li>
-            <li class="nav-etem"><a href="" class="nav-link">Transposition</a></li>
+            <li class="nav-etem"><a href="trasposition.html" class="nav-link">Transposition</a></li>
         </ul>
     </nav>
 </header>
