--- a/trasposition.html
+++ b/trasposition.html
@@ -14,22 +14,22 @@
     <nav class="navbar">
         <ul class="nav-menu w-100 ">
             <li class="nav-etem"><a href="index.html" class="nav-link">César</a></li>
-            <li class="nav-etem " id="th"><a href="" class="nav-link">Végenere</a></li>
-            <li class="nav-etem"><a href="trasposition.html" class="nav-link">Transposition</a></li>
+            <li class="nav-etem " ><a href="vegener.html" class="nav-link">Végenere</a></li>
+            <li class="nav-etem" id="th"><a href="" class="nav-link">Transposition</a></li>
         </ul>
     </nav>
 </header>
 <section class="container">
     <div class="textarea">
-        <textarea name="" id="vegenerinput" cols="100" rows="8" class="form-control"></textarea>
-        <input type="text" value="" name="" id="clevegener" class="form-control w-25" placeholder="saisir le clé">
+        <textarea name="" id="trsinput" cols="100" rows="8" class="form-control">yassine</textarea>
+        <input type="text" value="div" name="" id="cletrs" class="form-control w-25" placeholder="saisir le clé">
     </div>
     <div class="div-btn">
-        <button class="btn btn-y" onclick="vegener_chiffrement()">Chiffrement</button>
-        <button class="btn btn-y" onclick="vegener_dechiffrement()">DeChiffrement</button>
+        <button class="btn btn-y" onclick="trs_chiffrement()">Chiffrement</button>
+        <button class="btn btn-y" onclick="trs_dechiffrement()">DeChiffrement</button>
     </div>
     <div class=" textarea">
-        <textarea name="" id="vegeneroutput" cols="100" rows="8" class="form-control" disabled>
+        <textarea name="" id="trsoutput" cols="100" rows="8" class="form-control" disabled>
 
         </textarea>
     </div>
