--- a/trasposition.html
+++ b/trasposition.html
@@ -27,7 +27,7 @@
     </div>
     <div class="div-btn">
         <button class="btn btn-y" onclick="trs_chiffrement()">Chiffrement</button>
-        <button class="btn btn-y" onclick="trs_dechiffrement()">DeChiffrement</button>
+        <!-- <button class="btn btn-y" onclick="trs_dechiffrement()">DeChiffrement</button> -->
     </div>
     <div class=" textarea">
         <textarea name="" id="trsoutput" cols="100" rows="8" class="form-control" disabled>
